syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/fiss/fiss_diagnosis_present_on_admission_indicator.proto";

message FissDiagnosisCode {
  // Diagnosis Code Two:
  //
  // This field identifies the International Classification of Diseases (ICD) -9 or ICD-10 code describing the
  // condition of the patient for a particular claim record, which co-exist at the time of admission, or develop
  // subsequently. For copybooks where this field contains up to twenty five diagnosis’ occurrences, the first
  // occurrence describes the principle diagnosis, the second through twenty fifth occurrences describe the
  // additional/secondary diagnosis. Other copybooks identify this field as the patient’s second diagnosis code.
  string diag_cd_2 = 1;

  // Diagnosis Present On Admission (POA) Indicator:
  //
  // This field identifies the patient’s condition that is present at the time the order for inpatient admission
  // to a general acute care hospital occurs. This indicator is assigned to every principal and secondary diagnosis
  // on an inpatient acute care hospital claim, and the external cause of injury codes. Conditions that develop
  // during an outpatient encounter, including emergency department, observation, or outpatient surgery, are
  // considered as present on admission. The Centers for Medicare and Medicaid Services (CMS) does not require a
  // POA indicator for the external cause of injury code unless it is being reported as another diagnosis. Effective
  // with discharges on or after 10/01/07.
  FissDiagnosisPresentOnAdmissionIndicator diag_poa_ind = 2;

  // Bit Flags:
  //
  // This field identifies a set of flags returned by DRG Grouper or Medicare Code Editor (MCE) to indicate claim
  // diagnosis errors effective with discharges on or after 10/01/07.
  optional string bit_flags = 3;
}
